Fixed wrap issue on radio button group

--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -1,7 +1,7 @@
 .radio-nm {
   display: grid;
   gap: 1rem;
-  width: max-content;
+  max-width: 100%;
 
   .form-label-nm {
     margin-bottom: 0;
